--- a/views/main.ejs
+++ b/views/main.ejs
@@ -89,6 +89,8 @@
                     <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
                   <% } %>
                 </select>
+                <div class="modal-thumbnails">
+                </div>
                 <span class="btn btn-primary btn-file form-control">
                   Upload an Image <input id='create-file' type="file" names="files[]" multiple>
                 </span>
