--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -356,6 +356,10 @@ input[type="radio"]{
   margin: 5px;
 }
 
+#create-modal .modal-thumbnails{
+  margin-left: 0;
+}
+
 .modal-body::-webkit-scrollbar-track{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
