--- a/views/main.ejs
+++ b/views/main.ejs
@@ -118,6 +118,7 @@
               <div class="modal-thumbnails">
               </div>
               <div class="post-description"></div>
+              <button class="btn btn-info btn-xs category-tag"></button>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
