--- a/public/templates/posts.ejs
+++ b/public/templates/posts.ejs
@@ -19,7 +19,7 @@
         <div class="col-sm-10">
           <h5 class="post-description truncate">
             <%= posts[i].description%>
-          </h5>
+          </h5><button class="btn btn-info btn-xs"><%= posts[i].category.name%></button>
         </div>
       </div>
     </div>
