--- a/views/main.ejs
+++ b/views/main.ejs
@@ -131,7 +131,7 @@
           <div class="col-md-3">
             <div class="control-panel row panel panel-success">
               <div class="panel-heading">
-                Control Panel
+                Control Panel <i class="fa fa-undo pull-right"></i>
               </div>
               <div class="panel-body">
                 <div class="list-group">
