--- a/views/main.ejs
+++ b/views/main.ejs
@@ -104,6 +104,21 @@
         </div>
       </div>
 
+      <div class="modal fade" id="loading-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="myModalLabel">Uploading...</h4>
+            </div>
+              <div class="modal-body">
+                <div class="progress-bar color stripes">
+                  <span style="width:0;"></span>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Post Modal -->
       <div class="modal fade" id="post-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
