css fix for mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,7 +221,7 @@ ul, .navbar-right{
   box-shadow: 1px;
 }
 
-.delete{
+.delete, .edit{
   color: #2c3e50;
   cursor: pointer;
   opacity: 0.4;
@@ -229,7 +229,7 @@ ul, .navbar-right{
   margin: 2px;
   margin-right: 10px;
 }
-.delete:hover{
+.delete:hover, .edit:hover{
   opacity: 1;
 }
 
@@ -455,6 +455,9 @@ body::-webkit-scrollbar-thumb{
   .row .post h1, h2, h3, h4, h5{
     margin-top: 4px;
     margin-bottom: 4px;
+  }
+  .modal-dialog{
+      width: auto;
   }
 }
 
