--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -457,7 +457,14 @@ body::-webkit-scrollbar-thumb{
     margin-bottom: 4px;
   }
   .modal-dialog{
-      width: auto;
+    width: auto;
+  }
+  .modal-image-container{
+    width: 100%;
+    margin-left: 0;
+  }
+  .modal-thumbnails{
+    margin-left: 0;
   }
 }
 
