--- a/views/main.ejs
+++ b/views/main.ejs
@@ -81,19 +81,39 @@
             </div>
             <form id="create-form">
               <div class="modal-body">
-                <input class="form-control create-title" required type="text" placeholder="Title">
-                <textarea class="form-control create-description" required type="text" placeholder="Description"></textarea>
-                <input class="form-control create-price" required type="number" placeholder="Price">
-                <select class='form-control create-categories' required>
-                  <% for (var i = 0; i < categories.length; i++) { %>
-                    <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
-                  <% } %>
-                </select>
-                <div class="modal-thumbnails">
+                <div class="form-group">
+                  <label>Title</label>
+                  <input class="form-control create-title" required type="text">
                 </div>
-                <span class="btn btn-primary btn-file form-control">
-                  Upload an Image <input id='create-file' type="file" names="files[]" multiple>
-                </span>
+
+                <div class="form-group">
+                  <label>Description</label>
+                  <textarea class="form-control create-description" required type="text"></textarea>
+                </div>
+                <div class="form-group">
+                  <label>Price</label>
+                  <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    <input class="form-control create-price" value="0" required type="number" pattern="\d*" min="0">
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label>Category</label>
+                  <select class='form-control create-categories' required>
+                    <% for (var i = 0; i < categories.length; i++) { %>
+                      <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
+                    <% } %>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label>Images</label>
+                  <div class="modal-thumbnails">
+                  </div>
+                  <span class="btn btn-primary btn-file form-control">
+                    Upload an Image <input id='create-file' type="file" names="files[]" multiple>
+                  </span>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
