--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,12 +47,21 @@
         </div>
         <form id="signup-form">
           <div class="modal-body">
-            <input class="form-control" id="signup-email" type="email" placeholder="University Email" data-parsley-student required
-            data-parsley-required-message="Looks like you forgot to fill this out">
-            <input class="form-control" id="signup-password" type="password" placeholder="Password" required data-parsley-minlength="6"
-             data-parsley-required-message="Looks like you forgot to fill this out">
-            <input class="form-control" id="signup-password-confirm" type="password" placeholder="Confirm Password" required data-parsley-equalto="#signup-password"
-            data-parsley-required-message="Looks like you forgot to fill this out">
+            <div class="form-group">
+              <label>Email</label>
+              <input class="form-control" id="signup-email" type="email" placeholder="University Email" data-parsley-student required
+              data-parsley-required-message="Looks like you forgot to fill this out">
+
+            </div>
+
+            <div class="form-group">
+              <label>Password</label>
+              <input class="form-control" id="signup-password" type="password" placeholder="Password" required data-parsley-minlength="6"
+               data-parsley-required-message="Looks like you forgot to fill this out">
+              <input class="form-control" id="signup-password-confirm" type="password" placeholder="Confirm Password" required data-parsley-equalto="#signup-password"
+              data-parsley-required-message="Looks like you forgot to fill this out">
+            </div>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -69,7 +78,7 @@
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
                   <form class="dropdown-menu" id="login-dropdown-menu">
-                    <input class="form-control" name="email" type="email" placeholder="Email" id="login-email" required>
+                    <input class="form-control" name="email" type="email" placeholder="Email" id="login-email" required data-parsley-student>
                     <input class="form-control" name="password" type="password" placeholder="Password" id="login-password" required>
                     <button class="form-control btn btn-primary btn-block" type="submit" id="login-submit">Sign In</button>
                     <a href="/forgot_password" class="pull-right">Forgot your password?</a>
