initial editing support

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -144,7 +144,12 @@
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <i class="delete fa fa-trash"></i>
-              <h3 class="modal-title"></h3>
+              <i class="edit fa fa-pencil"></i>
+              <i class="confirm fa fa-floppy-o"></i>
+              <h3 class="modal-title">
+                <span class="post-title"></span>
+                <span class="post-price-container"> - $<span class='post-price'></span></span>
+              </h3>
             </div>
             <div class="modal-body">
               <div class="modal-image-container"><div class='modal-image'></div></div>
