--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,7 +221,7 @@ ul, .navbar-right{
   box-shadow: 1px;
 }
 
-.delete, .edit{
+.delete, .edit, .confirm, .cancel{
   color: #2c3e50;
   cursor: pointer;
   opacity: 0.4;
@@ -229,7 +229,7 @@ ul, .navbar-right{
   margin: 2px;
   margin-right: 10px;
 }
-.delete:hover, .edit:hover{
+.delete:hover, .edit:hover, .confirm:hover, .cancel:hover{
   opacity: 1;
 }
 
@@ -280,6 +280,15 @@ input[type="radio"]{
   -moz-transition : border 500ms ease-out;
   -o-transition : border 500ms ease-out;
   transition : border 500ms ease-out;
+}
+
+.editable{
+  border: 1px dashed #3498db;
+  border-radius: 2px;
+  -webkit-transition : border 100ms ease-out;
+  -moz-transition : border 100ms ease-out;
+  -o-transition : border 100ms ease-out;
+  transition : border 100ms ease-out;
 }
 
 .create-price + ul{
