adds PUT route for ajax

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -145,7 +145,7 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <i class="delete fa fa-trash"></i>
               <i class="edit fa fa-pencil"></i>
-              <i class="confirm fa fa-floppy-o"></i>
+              <i class="edit-confirm fa fa-floppy-o"></i>
               <h3 class="modal-title">
                 <span class="post-title"></span>
                 <span class="post-price-container"> - $<span class='post-price'></span></span>
