--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -221,7 +221,7 @@ ul, .navbar-right{
   box-shadow: 1px;
 }
 
-.delete, .edit, .confirm, .cancel{
+.delete, .edit, .edit-confirm{
   color: #2c3e50;
   cursor: pointer;
   opacity: 0.4;
@@ -229,7 +229,7 @@ ul, .navbar-right{
   margin: 2px;
   margin-right: 10px;
 }
-.delete:hover, .edit:hover, .confirm:hover, .cancel:hover{
+.delete:hover, .edit:hover, .edit-confirm:hover{
   opacity: 1;
 }
 
