--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,13 +100,13 @@
       <div class="row-fluid marketing">
           <div class="span6">
               <h4><i class="fa fa-circle-o"></i> Simple</h4>
-              <p>Search and filter postings to find textbooks, jobs, roomates, and much more. All in one place.</p>
+              <p>Search and filter postings to find textbooks, furniture, jobs, roommates, and much more. All in one place.</p>
               <h4><i class="fa fa-book"></i> Exclusive</h4>
-              <p>All users are verified students, ensuring our postings are from friendly peers.</p>
+              <p>All users are verified students or graduates with a .edu email, allowing our postings to be from friendly peers.</p>
           </div>
           <div class="span6">
               <h4><i class="fa fa-lock"></i> Secure</h4>
-              <p>All connections are secred with SSL encryption, ensuring you can browse safely.</p>
+              <p>All connections are secured with SSL encryption, ensuring you can browse safely.</p>
               <h4><i class="fa fa-gift"></i> Free</h4>
               <p>Bazaar is an free service to students, and always will be. Enjoy!</p>
           </div>
