--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimum-scale=1" />
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="google-site-verification" content="SIm0EEU9xWfmzDBevZfA7bGga9rOcoUmYO_Uda9G6wM" />
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
