--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,8 @@ h1, h2, h3, h4, h5, h6{
   margin-bottom: 20px;
 }
 
-.control-panel .panel-heading .fa{
+.control-panel .panel-heading .fa,
+.map-panel .panel-heading .fa{
   margin-top: 4px;
   cursor: pointer;
 }
