refactors updating posts

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -185,7 +185,7 @@
                   </div>
                   <div class="list-group-item">
                     <i class="fa fa-sort-amount-desc"></i>
-                      <input type="radio" name='order' value="createdAt" checked="checked">Date
+                      <input type="radio" name='order' value="updatedAt" checked="checked">Date
                       <input type="radio" name='order' value="price">Price
                   </div>
                 </div>
