initial UI for changing location

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -161,7 +161,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <a id="modal-contact" href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY" target="_blank" class="btn btn-success">Contact</a>
+              <a id="modal-contact" href="" class="btn btn-success">Contact</a>
             </div>
           </div>
         </div>
@@ -191,9 +191,9 @@
                 </div>
               </div>
             </div>
-            <div class="row panel panel-info">
+            <div class="map-panel row panel panel-info">
               <div class="panel-heading">
-                Map
+                Map <i class="fa fa-plane pull-right"></i>
               </div>
               <div class="panel-body">
                 <div id="map-canvas"></div>
