switches from updatedAt to createdAt

--- a/public/templates/posts.ejs
+++ b/public/templates/posts.ejs
@@ -48,7 +48,7 @@
         <div class="bg-success price"><h4><%= priceStr %></h4></div>
       </div>
       <div class="row post-time">
-        <h6><%= moment(posts[i].updatedAt).fromNow() %></h6>
+        <h6><%= moment(posts[i].createdAt).fromNow() %></h6>
       </div>
     </div>
   </div>
