--- a/views/main.ejs
+++ b/views/main.ejs
@@ -205,6 +205,7 @@
             <nav>
               <ul class="pager">
                 <li class="previous"><a href="#" onclick="this.blur();"><span aria-hidden="true">&larr;</span> Newer</a></li>
+                <li class="page-info"></li>
                 <li class="next"><a href="#" onclick="this.blur();">Older <span aria-hidden="true">&rarr;</span></a></li>
               </ul>
             </nav>
