reorders panels on mobile

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="row main-content">
-          <div class="col-md-3">
+          <div class="col-md-3" id="panels">
             <div class="control-panel row panel panel-success">
               <div class="panel-heading">
                 Control Panel <i class="fa fa-undo pull-right"></i>
