--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -128,10 +128,9 @@
     <script src="https://bootflat.github.io/bootflat/js/jquery.fs.selecter.min.js"></script>
     <script src="https://bootflat.github.io/bootflat/js/jquery.fs.stepper.min.js"></script>
     <script src="/javascripts/parsley.min.js"></script>
-    <script src="/javascripts/uuid.js"></script>
     <script src="/javascripts/ejs_production.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="/javascripts/sweet-alert.min.js"></script>
-    <script src="/javascripts/main.min.js"></script>
+    <script src="/javascripts/settings.js"></script>
   </body>
 </html>
