--- a/views/main.ejs
+++ b/views/main.ejs
@@ -117,7 +117,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" id="create-submit" class="btn btn-success">Save changes</button>
+                <button type="submit" id="create-submit" class="btn btn-success">Create Post</button>
               </div>
             </form>
           </div>
