--- a/views/main.ejs
+++ b/views/main.ejs
@@ -108,8 +108,7 @@
                 </div>
                 <div class="form-group">
                   <label>Images</label>
-                  <div class="modal-thumbnails">
-                  </div>
+                  <div class="modal-thumbnails"></div>
                   <span class="btn btn-primary btn-file form-control">
                     Upload an Image <input id='create-file' type="file" names="files[]" multiple>
                   </span>
@@ -148,6 +147,9 @@
               <i class="delete fa fa-trash"></i>
               <i class="edit fa fa-pencil"></i>
               <i class="edit-confirm fa fa-floppy-o"></i>
+              <span class="btn btn-primary btn-xs btn-file">
+                Upload a new image <input id='edit-file' type="file" names="files[]" multiple>
+              </span>
               <h3 class="modal-title">
                 <span class="post-title"></span>
                 <span class="post-price-container"> - $<span class='post-price'></span></span>
@@ -155,8 +157,8 @@
             </div>
             <div class="modal-body">
               <div class="modal-image-container"><div class='modal-image'></div></div>
-              <div class="modal-thumbnails">
-              </div>
+
+              <div class="modal-thumbnails"></div>
               <div class="post-description"></div>
               <button class="btn btn-info btn-xs category-tag"></button>
             </div>
