--- a/views/main.ejs
+++ b/views/main.ejs
@@ -142,7 +142,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="myModalLabel">Where would you like to see posts?</h4>
+              <h4 class="modal-title" id="myModalLabel">Where are we going?</h4>
             </div>
               <div class="modal-body">
                 <form class="" id="travel-form" action="#" role="search">
