--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -46,7 +46,7 @@
               <a class="navbar-brand" href="/">Bazaar</a>
               <ul class="nav navbar-nav navbar-right mynavbar">
                 <li>
-                  <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
+                  <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-pencil-square-o fa-lg"></i></a>
                 </li>
                 <li>
                   <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
